--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>React</title>
+    <title>Sequencer</title>
 
     <!-- Viewport mobile tag for sensible mobile support -->
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   </head>
 
   <body>
-    <div id="app"></div>
+    <div id="sequencer"></div>
 
-    <script src="http://localhost:3000/dist/bundle.js"></script>
+    <script src="http://localhost:4000/dist/bundle.js"></script>
   </body>
 </html>
