--- a/public/index.html
+++ b/public/index.html
@@ -1,34 +1,40 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
+    <meta charset="utf-8">
+    <link rel="shortcut icon" href="%PUBLIC_URL%/favicon.ico">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta name="theme-color" content="#000000">
+    <link rel="manifest" href="%PUBLIC_URL%/manifest.json">
     <title>Sequencer</title>
   </head>
   <body>
-    <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
+      <script src="https://www.gstatic.com/firebasejs/3.6.4/firebase.js"></script>
+      <script>
+        // Initialize Firebase
+        var config = {
+          apiKey: "AIzaSyAUkSQiQcyKyWrgiWlnoAQ2PJvhHfYWsIY",
+          authDomain: "sequencer-2dafa.firebaseapp.com",
+          databaseURL: "https://sequencer-2dafa.firebaseio.com",
+          storageBucket: "sequencer-2dafa.appspot.com",
+          messagingSenderId: "275598279998"
+        };
+        firebase.initializeApp(config);
+      </script>
+    <noscript>
+      You need to enable JavaScript to run this app.
+    </noscript>
+    <div id="root"></div>
+  
     <script>
-      // Initialize Firebase
-      var config = {
-        apiKey: "AIzaSyAUkSQiQcyKyWrgiWlnoAQ2PJvhHfYWsIY",
-        authDomain: "sequencer-2dafa.firebaseapp.com",
-        databaseURL: "https://sequencer-2dafa.firebaseio.com",
-        storageBucket: "sequencer-2dafa.appspot.com",
-        messagingSenderId: "275598279998"
-      };
-      firebase.initializeApp(config);
-    </script>
-
-    <div id="sequencer"></div>
-    <script src="/dist/bundle.min.js"></script>
-
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
-
-      ga('create', 'UA-76403737-5', 'auto');
-      ga('send', 'pageview');
-
-    </script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  
+        ga('create', 'UA-76403737-5', 'auto');
+        ga('send', 'pageview');
+  
+      </script>
   </body>
 </html>
